# repository

./: .gitignore
bacs/lib/cpp/MikeMirzayanov-testlib-0.9.9/modules/: install.cmake
bacs/lib/cpp/src/: CMakeLists.txt
bacs/lib/cpp/testlib.googlecode.com-0.7.4/include/: testlib.h
bacs/lib/cpp/testlib.googlecode.com-0.7.4/modules/: install.cmake
bacs/lib/cpp/testlib.googlecode.com-0.8.5/: index
bacs/lib/cpp/testlib.googlecode.com-0.8.5/include/: testlib.h
bacs/lib/cpp/testlib.googlecode.com-0.8.5/modules/: install.cmake
bacs/lib/cpp/testlib.googlecode.com-0.9.12/: index
bacs/lib/cpp/testlib.googlecode.com-0.9.12/modules/: install.cmake
bacs/lib/cpp/testlib.googlecode.com-0.9.4/include/: testlib.h
bacs/lib/cpp/testlib.googlecode.com-0.9.4/modules/: install.cmake
bacs/lib/cpp/testlib.googlecode.com-0.9.5/include/: testlib.h
bacs/lib/cpp/testlib.googlecode.com-0.9.5/modules/: install.cmake
bacs/lib/cpp/testlib.googlecode.com/include/: testlib.h
bacs/lib/cpp/testlib.googlecode.com/modules/: install.cmake
bacs/lib/pas/Lopatin/modules/: install.cmake
bacs/lib/pas/Lopatin/src/: symbols.pas  testjury.pas  testlib.inc  trans.inc
bacs/lib/pas/SPb-IFMO/: index
bacs/lib/pas/SPb-IFMO/modules/: install.cmake
bacs/lib/pas/SPb-IFMO/src/: testlib.pas
bacs/lib/pas/kitten/: index
bacs/lib/pas/kitten/modules/: install.cmake
bacs/lib/pas/kitten/src/: symbols.pas  testlib.inc  testlib.pas
bacs/lib/pas/src/: CMakeLists.txt
bacs/system/checker/call/in_out_hint/src/src/checker/: in_out_hint.cpp
bacs/system/driver/simple0/tests/src/: CMakeLists.txt
bacs/system/driver/simple0/tests/src/modules/: tests.cmake
bacs/system/driver/simple0/tests/src/src/: main.cpp
bacs/system/driver/simple0/tests/src/src/tests/: simple0.cpp
bacs/system/single/checker/call/in_out_hint/src/: CMakeLists.txt
bacs/system/single/checker/call/in_out_hint/src/modules/: checker.cmake
bacs/system/single/checker/call/in_out_hint/src/src/: in_out_hint.cpp
bacs/system/single/checker/call/std/ok/src/: CMakeLists.txt
bacs/system/single/checker/return/bacs_legacy/src/: CMakeLists.txt
bacs/system/single/checker/return/bacs_legacy/src/modules/: checker_return.cmake
bacs/system/single/checker/return/bacs_legacy/src/src/: bacs_legacy.cpp
bacs/system/single/checker/return/bacs_legacy/src/src/checker_return/: bacs_legacy.cpp
bacs/system/single/checker/return/ejudge/src/: CMakeLists.txt
bacs/system/single/checker/return/ejudge/src/modules/: checker_return.cmake
bacs/system/single/checker/return/none/src/: CMakeLists.txt
bacs/system/single/checker/return/testlib/src/: CMakeLists.txt
bacs/system/single/checker/return/testlib/src/modules/: checker_return.cmake
bacs/system/single/checker/return/testlib/src/src/: testlib.cpp
bacs/system/single/checker/return/testlib/src/src/checker_return/: testlib.cpp
bacs/system/single/checker/std/float/single/: index
bacs/system/single/driver/simple0/tests/src/: CMakeLists.txt  TestsCMakeLists.txt
bacs/system/single/driver/simple0/tests/src/src/: main.cpp
bacs/system/single/list_tests/src/: CMakeLists.txt  TestsCMakeLists.txt
bacs/system/single/list_tests/src/src/: main.cpp
bacs/system/single/src/: CMakeLists.txt
bacs/system/single/src/include/bacs/single/: builder.hpp  callback.hpp  checker.hpp  common.hpp  error.hpp  process.hpp  testing.hpp  tests.hpp  validator.hpp
bacs/system/single/src/include/bacs/single/detail/: file.hpp  process.hpp  result.hpp
bacs/system/single/src/include/bacs/system/single/: builder.hpp  callback.hpp  checker.hpp  common.hpp  error.hpp  tester.hpp  testing.hpp  tests.hpp  validator.hpp
bacs/system/single/src/include/bacs/system/single/detail/: file.hpp  process.hpp  result.hpp  tester.hpp
bacs/system/single/src/src/lib/: builder.cpp  callback.cpp  process.cpp  testing.cpp  testing_impl.cpp  testing_test.cpp  tests.cpp
bacs/system/single/src/src/lib/builders/: compilable.cpp  compilable.hpp  fpc.cpp  fpc.hpp  gcc.cpp  gcc.hpp  interpretable.cpp  interpretable.hpp  java.cpp  java.hpp  mono.cpp  mono.hpp  native_compilable.cpp  native_compilable.hpp  python.cpp  python.hpp
bacs/system/single/src/src/lib/callbacks/: xmlrpc.cpp  xmlrpc.hpp
bacs/system/single/src/src/lib/detail/: file.cpp  process.cpp  result.cpp
bacs/system/single/tester/call/interactive/bacs0/: index
bacs/system/single/tester/call/interactive/bacs0/src/: CMakeLists.txt
bacs/system/single/tester/call/interactive/bacs0/src/modules/: tester.cmake
bacs/system/single/tester/call/interactive/bacs0/src/src/: interactive_bacs0.cpp
bacs/system/single/tester/call/interactive/bacs0/src/src/tester/: interactive_bacs0.cpp
bacs/system/single/tester/call/std/standalone/src/: CMakeLists.txt
bacs/system/single/tester/call/std/standalone/src/modules/: tester.cmake
bacs/system/single/tester/call/std/standalone/src/src/: standalone.cpp
bacs/system/single/tester/call/std/standalone/src/src/tester/: standalone.cpp
bacs/system/single/tester/return/bacs/src/: CMakeLists.txt
bacs/system/single/tester/return/none/src/: CMakeLists.txt
bacs/system/single/tests/call/copy/: index
bacs/system/single/tests/call/copy/src/: CMakeLists.txt
bacs/system/single/tests/call/copy/src/modules/: copy.cmake
bacs/system/single/tests/call/copy/src/src/: copy.cpp
bacs/system/single/tests/call/copy/src/src/tests/: copy.cpp
bacs/system/single/tests/return/none/: index
bacs/system/statement/pdflatex/src/: CMakeLists.txt
bacs/system/system_verifier/src/: CMakeLists.txt
bacs/system/utility/dot_net_solution/src/: CMakeLists.txt
bacs/system/utility/single/c/: index
bacs/system/utility/single/c_cpp/: index
bacs/system/utility/single/c_cpp/src/: CMakeLists.txt
bacs/system/utility/single/cpp/: index
bacs/system/utility/single/cpp/src/modules/: compiler_flags.cmake
bacs/system/utility/single/java/src/: CMakeLists.txt
bacs/system/utility/single/java/src/wrap/unix/: main.cpp.in
bacs/system/utility/single/pas/src/: CMakeLists.txt
bacs/system/utility/single/py/src/: CMakeLists.txt
(+40 files in other folders)
